Table Users {
  UserID int [primary key, unique, note: 'Auto-incrementing primary key']
  Name text [not null]
  Address text [not null]
  Email text [not null, unique, note: 'User email address']
  Phone varchar(10)
  LendingDiameter int [note: 'In kilometers, how far out they are willing to lend']
  Latitude float [note: 'For storing latitude of the address']
  Longitude float [note: 'For storing longitude of the address']
}

Table Tools [ref: > Requests] {
  ToolID int [primary key, unique, note: 'Auto-incrementing primary key']
  Name varchar(255) [not null]
  Picture varchar(255) [note: 'URL or file path to the image']
  Description text
  Deposit decimal(10, 2) [note: 'Deposit requested (to be returned to borrower)']
  Charge decimal(10, 2) [note: 'Fee amount (to be decided if implemented)']
  DI4U bool [note: 'Whether the tool is available for drop-in-for-use']
  OwnerID int [ref: > Users.UserID, note: 'Foreign key referencing Users(UserID)']
}

Table Requests [note: 'for all borrow/lend transactions and history'] {
  RequestID int [primary key, unique, note:'auto-incrementing']
  OwnerID int [ref: < Users.UserID, note: 'Foreign key referencing Users(UserID)'] 
  BorrowerID int [ref: < Users.UserID, note: 'Foreign key referencing Users(UserID)']
  ToolID int [ref: > Tools.ToolID, note: 'Foreign key referencing Tools(ToolID)']
  Status RequestStatus [note: 'Status of the lending request']
  LenderRating bool [note: 'Whether lender approves the transaction, basically a thumbs up/down']
  BorrowerRating bool [note: 'Whether borrower approves the transaction']
  BorrowerFeedback text [note: 'Any text notes to leave']
  LenderFeedback text [note: 'Any text notes to leave']
  RequestDate timestamp [default: `now()`, note: 'Date and time when the request was made']
  ApproveDate timestamp [note: 'Date and time when the request was approved']
  BorrowDate timestamp [note: 'Date and time when the tool was borrowed']
  ReturnDate timestamp [note: 'Date and time when the tool was returned']
}

Enum RequestStatus {
    Pending
    Approved
    Borrowed
    Returned
    NotReturned [note: 'Tool was not returned']
}


